[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/fonts/Daydream.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/menus/global/slider_option.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/global/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/menus/menu_options/menu_options.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 1 )

[node name="MenuOptions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="SoundSettingsTitle" type="Label" parent="."]
margin_left = 202.0
margin_top = 67.0
margin_right = 436.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
text = "sound settings"

[node name="Sliders" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Master" type="Control" parent="Sliders"]
margin_right = 40.0
margin_bottom = 40.0

[node name="MasterSlider" parent="Sliders/Master" instance=ExtResource( 2 )]
margin_left = 294.0
margin_top = 103.0
margin_right = 424.0
margin_bottom = 119.0

[node name="HSlider" parent="Sliders/Master/MasterSlider" index="0"]
margin_bottom = 16.0

[node name="Value" parent="Sliders/Master/MasterSlider" index="1"]
margin_top = 2.0
margin_bottom = 13.0

[node name="Label" type="Label" parent="Sliders/Master"]
margin_left = 226.0
margin_top = 105.0
margin_right = 288.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "Master"

[node name="Sound" type="Control" parent="Sliders"]
margin_right = 40.0
margin_bottom = 40.0

[node name="SoundSlider" parent="Sliders/Sound" instance=ExtResource( 2 )]
margin_left = 294.0
margin_top = 122.0
margin_right = 446.0
margin_bottom = 138.0

[node name="HSlider" parent="Sliders/Sound/SoundSlider" index="0"]
margin_bottom = 16.0

[node name="Value" parent="Sliders/Sound/SoundSlider" index="1"]
margin_top = 2.0
margin_bottom = 13.0

[node name="Label" type="Label" parent="Sliders/Sound"]
margin_left = 226.0
margin_top = 123.0
margin_right = 277.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 3 )
text = "SOUND"

[node name="Music" type="Control" parent="Sliders"]
margin_right = 40.0
margin_bottom = 40.0

[node name="SliderOption" parent="Sliders/Music" instance=ExtResource( 2 )]
margin_left = 294.0
margin_top = 138.0
margin_right = 394.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="Sliders/Music"]
margin_left = 226.0
margin_top = 141.0
margin_right = 273.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 4 )
text = "music"

[node name="SoundSettingsTitle2" type="Label" parent="."]
margin_left = 202.0
margin_top = 173.0
margin_right = 436.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 1 )
text = "video settings"

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 231.0
margin_top = 202.0
margin_right = 307.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 5 )
text = "FULLSCREEN"

[node name="Button" parent="." instance=ExtResource( 3 )]
margin_left = 39.0
margin_top = 284.0
margin_right = 118.0
margin_bottom = 328.0

[connection signal="value_changed" from="Sliders/Master/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Sliders/Sound/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]

[editable path="Sliders/Master/MasterSlider"]
[editable path="Sliders/Sound/SoundSlider"]
